Fixed cross not visible

--- a/src/App.css
+++ b/src/App.css
@@ -108,10 +108,8 @@ input[type='number'] {
 
 .list {
   list-style-type: none;
-  padding: 0;
   margin-bottom: 40px;
-  max-height: 200px;
-  overflow-y: scroll;
+  padding: 0;
 }
 
 .list li {
@@ -170,10 +168,11 @@ input[type='number'] {
         padding: 5px 15px;
     }
     .list {
-        overflow-y: scroll;
         margin-bottom: 20px;
         margin-top: 10px;
         max-height: 156px;
+        overflow-y: scroll;
+        padding: 0 18px;
     }
     .money {
         font-size: 17px;
